# pyautodoc

./: .gitignore  CMakeLists.txt  README.md
doxygen/: docs.h  doxygen_aliases.txt
doxygen/tutorial/: atom1.cpp  atom1.h  atom1.i  atom2.cpp  atom2.h  atom2.i  atom3.h  atom_docs1.i  atom_docstring1.txt  atom_docstring2.txt  atom_docstring3.txt  atom_docstring4.txt  atom_docstring5.txt  generate_documentation.py  generate_documentation2.py  test.py
doxygen_aliases/: doxygen_aliases.txt
example/atom/: CMakeLists.txt  test.py
example/atom/example/: test.py
example/atom/include/: atom.h
example/atom/samples/: Atom_Atom.py  Atom_double_mass.py  Atom_element.py  Atom_index.py  Atom_int_index.py  Atom_int_residueId.py  Atom_mass.py  Atom_name.py  Atom_residueId.py  Atom_residueName.py  Atom_str_element.py  Atom_str_name.py  Atom_str_residueName.py
example/atom/src/: atom.cpp
example/atom/swig/: atom.i  atom_docs.i  atom_typemaps.i  generate_documentation.py
include/: autodoc.h  autodoc_class.h  autodoc_description.h  autodoc_example.h  autodoc_function.h  autodoc_note.h  autodoc_parameter.h  autodoc_return.h  utils.h
src/: autodoc.cpp  autodoc_class.cpp  autodoc_description.cpp  autodoc_example.cpp  autodoc_function.cpp  autodoc_note.cpp  autodoc_parameter.cpp  autodoc_return.cpp  utils.cpp
swig/: autodoc.i  autodoc_documentation.i  autodoc_map_typemaps.i  autodoc_python_special_methods.i  generate_documentation.py
wrappers/pyautodoc/: MANIFEST.in  setup.cfg  setup.py
wrappers/pyautodoc/pyautodoc/: __init__.py
wrappers/pycautodoc/: LISCENSE  setup.cfg
